--- a/.render/render.yaml
+++ b/.render/render.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: jwt-auth-backend
     env: docker
-    dockerfilePath: ./lab7_1/Dockerfile
-    dockerContext: lab7_1
+    dockerfilePath: Dockerfile
+    dockerContext: ./lab7_1
     plan: free
     envVars:
       - key: NODE_ENV
@@ -40,7 +40,7 @@ services:
   - type: web
     name: jwt-auth-frontend
     env: docker
-    dockerfilePath: ./react-jwt-auth/Dockerfile
+    dockerfilePath: Dockerfile
     dockerContext: ./react-jwt-auth
     plan: free
     envVars:
